layout/wgt/wgt/wgt.menu.css
/*//////////////////////////////////////////////////////////////////////////////
// Wgt Menu
//////////////////////////////////////////////////////////////////////////////*/

.wgt-menu
{

}

/*//////////////////////////////////////////////////////////////////////////////
// Folder Menu
//////////////////////////////////////////////////////////////////////////////*/

div.wgt-menu.folder
{
  width:100%;
  margin:3px;
  padding:3px;
}

div.wgt-menu p
{
  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
}


div.wgt-menu.folder>div.wgt-entry,
div.wgt-block
{
  text-align:center;
  padding:4px;
  float:left;
  width:90px;
  height:90px;
  margin-bottom:30px;
  border:2px solid transparent !important;
  border-radius: 4px;
}

div.wgt-menu.folder>div.wgt-entry:hover,
div.wgt-block:hover
{
  border:2px solid silver !important;
  border-radius: 3px;
  background-color:#DFEFFC;
  -moz-box-shadow:3px 3px 3px #666;
  -webkit-box-shadow:3px 3px 3px #666;
  box-shadow:3px 3px 3px #666;  
}

div.wgt-menu.folder>div.wgt-entry p,
div.wgt-block p
{
  text-align:center;
  vertical-align:bottom;
  height:28px;
}

div.wgt-block.small
{
  width:90px;
  height:90px;
}

div.wgt-menu.folder>div.wgt-menu a
{
  display:block;
  text-decoration:none;
}

div.wgt-menu.folder>div.wgt-menu img
{
  border:none;
  margin:4px 0px 4px 0px;
}

/*//////////////////////////////////////////////////////////////////////////////
// List Menu
//////////////////////////////////////////////////////////////////////////////*/

ul.wgt-menu.list
{
  border:none;
  margin:4px 0px 4px 0px;
}

ul.wgt-menu.list li
{
  padding:3px;
}

ul.wgt-menu.list a
{
  display:block;
}

ul.wgt-menu.list img 
{
  border:0px;
  margin-right:5px;
  display:block;
  float:left;
}

ul.wgt-menu.list span 
{
  display:inline-block;
}

/*//////////////////////////////////////////////////////////////////////////////
// Menubar
//////////////////////////////////////////////////////////////////////////////*/

/*div.wgt-menu.bar,*/
div.wgt-menu.bar  ul
{
  width:100%;
}

div.wgt-menu.bar li
{
	padding-top:8px;
  padding-left:3px;
  list-style:none;
  display:inline;
  float:left;
}

div.wgt-menu.bar .icon_bar
{
  height:33px;
  padding-left:5px;
  padding-right:5px;
}

div.wgt-menu.bar .entry
{
  padding-top:8px;
  padding-left:3px;
  float:left;
  font-weight:bold;
}

div.wgt-menu.bar .entry a
{
  border-bottom:0px;
}

/*//////////////////////////////////////////////////////////////////////////////
// Crumb Menu
//////////////////////////////////////////////////////////////////////////////*/


ul.wgt-menu.crumb
{
  border:1px solid black;
  background-color:white;
  padding:2px 3px 2px 3px;
  min-width:450px;
  text-align:left;
}

ul.wgt-menu.crumb li
{
  list-style:none;
  display:inline;
  padding:1px 3px 1px 3px;
  text-align:left;
}

ul.wgt-menu.crumb li img
{
  margin-bottom:-2px;
}

ul.wgt-menu.crumb a:hover
{
  background-color:silver;
}

/*//////////////////////////////////////////////////////////////////////////////
// Splitbutton Dropdown
//////////////////////////////////////////////////////////////////////////////*/

div.wgt-split-button
{
  position:relative;
}

ul.wgt-split-drop
{
  padding:3px;
}

button.wgt-button.splitted
{
  float:left;
}

div.wgt-split-button.listnav .wgt-button.append
{
  margin-left:-58px;
}


ul.wgt-split-drop .wgt-button
{
  width:99%;
  margin-bottom:1px;
  text-align:left;
}


ul.wgt-split-drop a.wgt-button
{
  display:block;
	padding:0px 2px 2px 2px;
  width:95% !important;	
}


.miniMenuCloseButton
{
  padding:7px 4px 5px 4px ;
}

